# ludo

./: CMakeLists.txt  README.md
include/: animation.hpp  board.hpp  input.hpp  scene.hpp  screen.hpp  space.hpp  sprite.hpp  time.hpp
include/glad/: glad.h
include/scene/: match_scene.hpp  scene.hpp  test_scene.hpp
include/scenes/: match_scene.hpp  test_scene.hpp
src/: animation.cpp  board.cpp  input.cpp  main.cpp  scene.cpp  screen.cpp  space.cpp  sprite.cpp  time.cpp
src/glad/: glad.c
src/scene/: match_scene.cpp  scene.cpp  test_scene.cpp
src/scenes/: match_scene.cpp  test_scene.cpp
